--- a/TP_Le_voyage_de_Michel_Strogonoff.ipynb
+++ b/TP_Le_voyage_de_Michel_Strogonoff.ipynb
@@ -238,8 +238,8 @@
    "source": [
     "from matplotlib.pyplot import *\n",
     "\n",
-    "n=10              # le nombre de verstes parcourus\n",
-    "Ly = ........     # La liste des sommes contenues dans la bourse pour toutes les étapes inférieures ou égales à n \n",
+    "n = 10              # le nombre de verstes parcourus\n",
+    "L = ........     # La liste des sommes contenues dans la bourse pour toutes les étapes inférieures ou égales à n \n",
     "for i in range(n+1):   # ce qui signifie 'pour toute les valeurs de i allant de 0 à n compris'\n",
     "    plot( ... , ... , ... , ... )\n",
     "...\n",
